# FiCode

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.de.md  README.fr.md  README.ja.md  README.md  README.zh_CN.md  fi-code-server.pid  frontend.pid  kind-config.yaml  package-lock.json  run_dev_cli.sh  run_dev_desktop.sh  run_dev_tui.sh  run_dev_web.sh  test.config.yaml
tests/: Cargo.toml  README.md  REFACTOR_PLAN.md  bdd_test.rs
tests/bdd/: mod.rs
tests/bdd/features/: agent_tools.feature  agent_types.feature
tests/bdd/steps/: agent_skills.rs  agent_tools.rs  common.rs  log_window.rs  mod.rs  slash_commands.rs  streaming.rs  task_splitting.rs
tests/e2e/: README.md  cli_e2e.rs  pytest.ini  requirements.txt  run_e2e.rs  tui_e2e.rs  tui_flow_e2e.rs
tests/e2e-common/: README.md
tests/e2e-tui/: tui_flow_e2e.rs
tests/e2e-web/python/: COMPLETE_TEST_REPORT.md  README.md  config.example.env  conftest.py  constants.py  pytest.ini  requirements.txt  run_actual_test.py  run_demo.py  run_e2e_demo.py  run_e2e_noninteractive.py  run_real_test.py  test_real_api_connection.py  test_web_e2e_real.py  test_web_real_model.py
tests/e2e-web/rust/: README.md  web_api_e2e.rs
tests/e2e/tui/: conftest.py  test_tui_backend_server.py  test_tui_chat_session.py  test_tui_code_writing.py  test_tui_help.py  test_tui_simple_greeting.py  test_tui_sse_lifecycle.py  test_tui_task_splitting.py  test_tui_version.py
tests/e2e/web/: test_web_basic_functionality.py  test_web_e2e_real.py  test_web_observability.py  test_web_performance.py  test_web_real_model.py  test_web_simple_demo.py  (+4 more)
(+342 files in other folders)
