[package]
name = "fi-code-tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "fi_code_tests"
path = "lib.rs"

# ============================================
# E2E 测试 - TUI 相关
# ============================================

[[test]]
name = "e2e_tui_cli"
path = "e2e-tui/cli_e2e.rs"

[[test]]
name = "e2e_tui_basic"
path = "e2e-tui/tui_e2e.rs"

[[test]]
name = "e2e_tui_flow"
path = "e2e-tui/tui_flow_e2e.rs"

# ============================================
# E2E 测试 - Web 相关 (Rust)
# ============================================
# (待添加，使用 reqwest 测试 HTTP API)

# ============================================
# BDD 测试
# ============================================

[[test]]
name = "bdd"
path = "bdd_test.rs"
harness = false

[dependencies]
fi-code-utils = { path = "../crates/utils" }
fi-code-core = { path = "../crates/core" }
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1.15" }
anyhow = "1.0"
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["json"] }
cucumber = "0.23"
futures = "0.3"
